@@ -1,3 +1,8 @@
+2017-06-04  Tom de Vries  <tom@codesourcery.com>
+
+	* testsuite/runtest.all/libs.exp (process_test): Check if test has
+	reportable output.
+
 2017-03-11  Thomas Preud'homme  <thomas.preudhomme@arm.com>
 
 	* lib/remote.exp (remote_download): Add logging message when
